--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requests = "^2.26.0"
 nndownload = "^1.11"
 toml = "^0.10.2"
 colorlog = "<5.0.0"
+omegaconf = "^2.3.0"
+python-socks = "<2.0.0"
 
 [tool.poetry.dev-dependencies]
 pysen = { extras = ["lint"], version = "^0.9.1" }
@@ -17,6 +19,7 @@ ipython = "^7.25.0"
 jedi = "0.17.2"
 pytest-cov = "^2.12.1"
 bump2version = "^1.0.1"
+click = "<8.1.0"
 
 [tool.pysen.lint]
 enable_black = true
